--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "apollo-server": "^3.12.0",
     "apollo-server-core": "^3.12.0",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "graphql": "^16.7.1",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.2",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
